--- a/build.gradle
+++ b/build.gradle
@@ -36,14 +36,15 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 
-	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:14.0.688"
-	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:14.0.688"
+	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
+	modCompileOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
+	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
 
-	modApi("me.shedaniel.cloth:cloth-config-fabric:13.0.114") {
+	modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_version}") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
 
-	modApi "dev.architectury:architectury-fabric:11.0.8"
+	modApi "dev.architectury:architectury-fabric:${project.architectury_version}"
 
 	// Uncomment the following line to enable the deprecated Fabric API modules.
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
