--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.parallel=true
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.4
 yarn_mappings=1.20.4+build.3
-loader_version=0.15.5
+loader_version=0.15.6
 
 # Mod Properties
 mod_version=0.1-1.20.4
@@ -14,4 +14,7 @@ maven_group=net.n1kwastaken.moswords
 archives_base_name=moswords
 
 # Dependencies
-fabric_version=0.94.0+1.20.4
+fabric_version=0.95.1+1.20.4
+rei_version=14.0.688
+cloth_config_version=13.0.121
+architectury_version=11.0.11
