--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,14 @@ repositories {
 	maven {
 		url 'https://maven.shedaniel.me'
 	}
+	maven {
+		name = 'GeckoLib'
+		url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
+		content {
+			includeGroupByRegex("software\\.bernie.*")
+			includeGroup("com.eliotlash.mclib")
+		}
+	}
 
 }
 
@@ -37,7 +45,7 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-
+	modImplementation 'software.bernie.geckolib:geckolib-fabric-1.20.4:4.4.2'
 
 
 	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
