--- a/build.gradle
+++ b/build.gradle
@@ -22,16 +22,23 @@ repositories {
 		url 'https://maven.shedaniel.me'
 	}
 	maven {
-		name = 'GeckoLib'
-		url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
-		content {
-			includeGroupByRegex("software\\.bernie.*")
-			includeGroup("com.eliotlash.mclib")
-		}
+		name = "Ladysnake Mods"
+		url = 'https://maven.ladysnake.org/releases'
 	}
-
+	maven {
+		name = "TerraformersMC"
+		url = "https://maven.terraformersmc.com/"
+	}
+	maven {
+		name = "Ladysnake Libs"
+		url = 'https://maven.ladysnake.org/releases'
+	}
 }
 
+ext {
+	trinkets_version = "3.8.0"
+
+}
 fabricApi {
 	configureDataGeneration()
 }
@@ -42,10 +49,18 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
+
+	// Replace modImplementation with modApi if you expose components in your own AP
+
+	modImplementation "dev.emi:trinkets:${trinkets_version}"
+
+	// Replace modImplementation with modApi if you expose components in your own API
+	modImplementation "dev.onyxstudios.cardinal-components-api:<MODULE>:${project.cca_version}"
+	// Includes Cardinal Components API as a Jar-in-Jar dependency (optional but recommended)
+	include "dev.onyxstudios.cardinal-components-api:<MODULE>:${project.cca_version}"
+
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-	modImplementation 'software.bernie.geckolib:geckolib-fabric-1.20.4:4.4.2'
 
 
 	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
