--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,6 @@ fabric_version=0.95.1+1.20.4
 rei_version=14.0.688
 cloth_config_version=13.0.121
 architectury_version=11.0.11
+trinkets_version = 3.8.0
+cca_version = 5.4.0
+
